# JUMPCP_Production_Analysis

./: LICENSE
01_mAP/: 01_generate_mAP_harmony.py  02_generate_mAP_cellcount.py  main.py  pyproject.toml  utilscp.py
02_analyse_map/: 01_Plate_Effects_Compound_level_Analysis_of_phenotypic_activity.py  02_Compound_level_Analysis_of_phenotypic_activity.py  03_Profile_level_Analysis_of_phenotypic_activity.py  main.py  pyproject.toml
03_global_organisation/: 01_chemical_space.py  main.py  pyproject.toml
04_map_datasets/: 01_map_targets.py  02_map_MOA.py  03_map_toxcast.py  main.py  pyproject.toml
