[project]
name = "02-analyse-map"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair>=6.0.0",
    "marimo>=0.18.4",
    "pandas>=2.3.3",
    "ptitprince>=0.3.1",
    "pyarrow>=22.0.0",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.8.0",
]
