[project]
name = "04-map-datasets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair>=6.0.0",
    "copairs>=0.5.2",
    "marimo>=0.18.4",
    "matplotlib>=3.10.8",
    "pyarrow>=22.0.0",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.9.0",
]
